# StarterGL

./: CMakeLists.txt  README.md  makefile
include/glad/: glad.h
src/: glad.c  main.cpp
